# equilibot

./: .gitignore  .gitmodules  README.md
control/: control.py
pcb/: BLDC_driver.kicad_sch  equilibot.kicad_pcb  equilibot.kicad_prl  equilibot.kicad_pro  export_cart_20251206_003402.csv  fp-info-cache  fp-lib-table  imu.kicad_sch  leds.kicad_sch  place_footprints.ini  psu.kicad_sch  stepper_driver.kicad_sch  sym-lib-table
pcb/lib/Equilibot.pretty/: AMASS_XT60PW-M_1x02_P7.20mm_Horizontal.kicad_mod  ESP32-S3-WROOM-1.kicad_mod  TMC5240.kicad_mod  TestPoint_Pad_1.0x1.0mm.kicad_mod  USB_C_Receptacle_GCT_USB4105-xx-A_16P_TopMnt_Horizontal.kicad_mod  XDCR_ICM-42670-P.kicad_mod  XL_WS2812B_0807.kicad_mod  XL_WS2812B_1615.kicad_mod
pcb/lib/ICM-42670-P/: XDCR_ICM-42670-P.kicad_mod  (+1 more)
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
sim/: model.slx
src/: CMakeLists.txt  PROJECT_CONTEXT_SUMMARY.md  sdkconfig
src/datasheet_txt/: esp32-s3-wroom-1_wroom-1u.txt  esp32-s3.txt  icm-42670-p.txt  tmc5240.txt  ws2812.txt
src/main/: CMakeLists.txt  battery_monitor.cpp  battery_monitor.hpp  cascaded_pid_controller.cpp  cascaded_pid_controller.hpp  common.hpp  controller.hpp  controller.html  filter.hpp  freertos_wrappers.hpp  icm42670_spi.cpp  icm42670_spi.hpp  idf_component.yml  index.html  json_schema_imudata.json  kalman.hpp  led_strip.cpp  led_strip.hpp  led_strip_example.hpp  lock_guard.hpp  main.cpp  motor.html  pid_controller.hpp  spi_bus.cpp  spi_bus.hpp  tmc5240.cpp  tmc5240.hpp  util.hpp  vectors.hpp  web_server.cpp  web_server.hpp
(+13 files in other folders)
